	 Interface I and microdrive emulation (patch #1060831)
	 (Gergely Szasz)
20041128 if1.c,ui.c,ui/ui.h: simplify menu item (de)activation code.
20041128 if1.c: add void to prototypes where appropriate.
20041128 if1.[ch]: declare local functions as static.
20041128 if1.h: name parameters in if1.h prototypes.
20041128 if1.[ch],periph.c: update If1 menu in periph_update().
20041128 if1.c: split if1_port_{in,out} into multiple functions.
20041128 if1.c: declare local variables as static.
20041128 if1.c: various formatting 'improvements'.
20041128 if1.c,machine.c,lib/{Makefile.am,microdrive.bmp},ui/ui.h,
	 ui/gtk/statusbar.c,ui/sdl/sdldisplay.c: global rename of
	 'microdrv' to 'microdrive'.
20041201 z80/z80_ops.c: remove 'opcode may be used uninitialized'
         warning. There's no chance that it is, but gcc doesn't realise
	 that.
20041207 lib/{Makefile.am, disk_plus3.[szx|z80], tape_128.[szx|z80],
         tape_16.[szx|z80], tape_2048.[szx|z80], tape_2068.[szx|z80],
         tape_48.[szx|z80], tape_pentagon.[szx|z80], tape_plus2.[szx|z80],
         tape_plus2a.[szx|z80], tape_plus3.[szx|z80], tape_scorpion.[szx|z80]}:
         Change z80 snaps to szx snaps without joystick information to prevent
         Fuse attempting to change joystick settings when auto-loading tapes or
         disks.
20041222 display.c,screenshot.c: Fix compilation without libpng.
20041225 display.c,event.[ch],machine.c: first pass at character-accurate
	 rendering.
20041225 widget/widget.c: Add joystick prompt when loading snaps for widget UI.
20041227 display.c: reenable border emulation.
20041229 display.c,machine.c,memory.c,periph.[ch],ula.[ch],debugger/debugger.c,
	 z80/{z80.pl,z80_macros.h}: fixes for display timings with the
	 character-accurate renderer.
20041229 display.[ch]: reduce display_is_dirty to being 32-bit again as it's
	 no longer needed for the border. Various other bug fixes, leading
	 to the Overscan demo now looking pretty much perfect :-)