@@ -1150,3 +1150,4 @@
 20041229 display.[ch]: reduce display_is_dirty to being 32-bit again as it's
 	 no longer needed for the border. Various other bug fixes, leading
 	 to the Overscan demo now looking pretty much perfect :-)
+20041229 display.c: get Timex borders working properly again.
